# dayframe

./: .env.example  .gitignore  README.md  TERMS.md  ecosystem.config.js  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  read_logs.js  tailwind.config.js  tsconfig.json  vitest.config.ts
.cursor/rules/: project-standards.mdc
.github/workflows/: ci.yml
.trae/rules/: rule.md
docs/: deployment_guide.md
playwright-report/: index.html
public/: example-workout-plan.json
scripts/: migrate-db-encryption.ts  seed.ts
src/: auth.config.ts  auth.ts
src-tauri/: Cargo.toml  output.txt  tauri.conf.json  test_title.rs
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  test_ipc.rs  test_ipc2.rs
src/actions/: admin-analytics.ts  admin-dashboard.ts  ai-keys.ts  auth.ts  browser-tabs.ts  content.ts  journal.ts  notifications.ts  nutrition.ts  overview.ts  quotes.ts  security.ts  tasks.ts  upload.ts  weekly-focus.ts  workout.ts
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/components/: maintenance-check.tsx  mode-toggle.tsx  providers.tsx  theme-provider.tsx
src/hooks/: use-global-history.ts
src/lib/: api-response.ts  browser-open.ts  client-crypto.ts  constants.ts  crypto.ts  db-encryption.ts  desktop.ts  env.ts  guards.ts  journal-date-store.ts  journal-utils.ts  logger.ts  mongodb.ts  news.ts  nutrition.ts  rate-limit.ts  user-agent.ts  utils.ts
src/models/: AIInsight.ts  Announcement.ts  AuditLog.ts  BlogPost.ts  Bookmark.ts  BrowserTab.ts  (+19 more)
test-results/: .last-run.json
(+196 files in other folders)
