[package]
name = "dayframe-app"
version = "0.1.0"
description = "Dayframe desktop app"
authors = ["Dayframe"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `unstable`: `Window::add_child` embeds a webview in the main window (no separate floating `WebviewWindow`).
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-shell = { version = "2" }
tauri-plugin-dialog = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
zip = "0.6"
url = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[package.metadata.tauri]
config = "tauri.conf.json"
